--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "geethub",
   "version": "1.0.0",
   "description": "'Listen to music'",
-  "main": "index.js",
+  "main": "connect.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node connect.js"
   },
   "repository": {
     "type": "git",
